@@ -18,6 +18,44 @@
  */
 package org.apache.felix.framework;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.net.URLStreamHandler;
+import java.security.AccessControlException;
+import java.security.Permission;
+import java.security.cert.X509Certificate;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Dictionary;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Properties;
+import java.util.Set;
+import java.util.SortedSet;
+import java.util.StringTokenizer;
+import java.util.TreeMap;
+import java.util.TreeSet;
+import java.util.WeakHashMap;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
 import org.apache.felix.framework.BundleWiringImpl.BundleClassLoader;
 import org.apache.felix.framework.ServiceRegistry.ServiceRegistryCallbacks;
 import org.apache.felix.framework.cache.BundleArchive;
@@ -72,42 +110,6 @@ import org.osgi.resource.Requirement;
 import org.osgi.service.packageadmin.ExportedPackage;
 import org.osgi.service.resolver.ResolutionException;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.io.OutputStreamWriter;
-import java.io.PrintWriter;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLStreamHandler;
-import java.security.AccessControlException;
-import java.security.Permission;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Dictionary;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-import java.util.SortedSet;
-import java.util.StringTokenizer;
-import java.util.TreeMap;
-import java.util.TreeSet;
-import java.util.WeakHashMap;
-import java.util.concurrent.locks.Condition;
-import java.util.concurrent.locks.ReentrantLock;
-
 public class Felix extends BundleImpl implements Framework
 {
     // The secure action used to do privileged calls
@@ -136,7 +138,7 @@ public class Felix extends BundleImpl implements Framework
     private final Condition m_bundleLockCondition = m_bundleLock.newCondition();
 
     // Keeps track of threads wanting to acquire the global lock.
-    private final List<Thread> m_globalLockWaitersList = new ArrayList<Thread>();
+    private final List<Thread> m_globalLockWaitersList = new ArrayList<>();
     // The thread currently holding the global lock.
     private Thread m_globalLockThread = null;
     // How many times the global lock was acquired by the thread holding
@@ -146,7 +148,7 @@ public class Felix extends BundleImpl implements Framework
 
     // Maps a bundle location to a bundle location;
     // used to reserve a location when installing a bundle.
-    private final Map<String, String> m_installRequestMap = new HashMap<String, String>();
+    private final Map<String, String> m_installRequestMap = new HashMap<>();
     // This lock must be acquired to modify m_installRequestMap;
     // to help avoid deadlock this lock as priority 1 and should
     // be acquired before locks with lower priority.
@@ -178,13 +180,13 @@ public class Felix extends BundleImpl implements Framework
     private volatile int m_targetStartLevel = FelixConstants.FRAMEWORK_INACTIVE_STARTLEVEL;
     // Keep track of bundles currently being processed by start level thread.
     private final SortedSet<StartLevelTuple> m_startLevelBundles =
-        new TreeSet<StartLevelTuple>();
+        new TreeSet<>();
 
     // Local bundle cache.
     private BundleCache m_cache = null;
 
     // System bundle activator list.
-    List m_activatorList = null;
+    List<BundleActivator> m_activatorList = null;
 
     // Next available bundle identifier.
     private long m_nextId = 1L;
@@ -350,29 +352,27 @@ public class Felix extends BundleImpl implements Framework
      * @param configMap A map for obtaining configuration properties,
      *        may be <tt>null</tt>.
     **/
-    public Felix(Map configMap)
+    public Felix(Map<String,?> configMap)
     {
         this(configMap, null);
     }
 
-    public Felix(Map configMap, ModuleConnector connectFramework)
+    public Felix(Map<String,?> configMap, ModuleConnector connectFramework)
     {
-        super();
         // Copy the configuration properties; convert keys to strings.
-        m_configMutableMap = new StringMap();
+        m_configMutableMap = new StringMap<>();
         if (configMap != null)
         {
-            for (Iterator i = configMap.entrySet().iterator(); i.hasNext(); )
+            for (Entry<String,?> e : configMap.entrySet())
             {
-                Map.Entry entry = (Map.Entry) i.next();
-                m_configMutableMap.put(entry.getKey().toString(), entry.getValue());
+                m_configMutableMap.put(e.getKey().toString(), e.getValue());
             }
         }
 
 
         // Get any system bundle activators.
-        m_activatorList = (List) m_configMutableMap.remove(FelixConstants.SYSTEMBUNDLE_ACTIVATORS_PROP);
-        m_activatorList = (m_activatorList == null) ? new ArrayList() : new ArrayList(m_activatorList);
+        m_activatorList = (List<BundleActivator>) m_configMutableMap.remove(FelixConstants.SYSTEMBUNDLE_ACTIVATORS_PROP);
+        m_activatorList = (m_activatorList == null) ? new ArrayList<>() : new ArrayList<>(m_activatorList);
 
         m_configMap = createUnmodifiableMap(m_configMutableMap);
 
@@ -435,7 +435,7 @@ public class Felix extends BundleImpl implements Framework
         // Create service registry.
         m_registry = new ServiceRegistry(m_logger, new ServiceRegistryCallbacks() {
             @Override
-            public void serviceChanged(ServiceEvent event, Dictionary oldProps)
+            public void serviceChanged(ServiceEvent event, Dictionary<String,?> oldProps)
             {
                 fireServiceEvent(event, oldProps);
             }
@@ -505,9 +505,9 @@ public class Felix extends BundleImpl implements Framework
         return m_bootPkgWildcards;
     }
 
-    private Map createUnmodifiableMap(Map mutableMap)
+    private <K,V> Map<K,V> createUnmodifiableMap(Map<K,V> mutableMap)
     {
-        Map result = Collections.unmodifiableMap(mutableMap);
+        Map<K,V> result = Collections.unmodifiableMap(mutableMap);
 
         // Work around a bug in certain version of J9 where a call to
         // Collections.unmodifiableMap().keySet().iterator() throws
@@ -540,7 +540,8 @@ public class Felix extends BundleImpl implements Framework
         return this;
     }
 
-    @Override
+    @SuppressWarnings("unchecked")
+	@Override
     public <A> A adapt(Class<A> type)
     {
         checkAdapt(type);
@@ -645,7 +646,7 @@ public class Felix extends BundleImpl implements Framework
     @Override
     public void init() throws BundleException
     {
-        init(null);
+        init((FrameworkListener[])null);
     }
 
     /**
@@ -745,11 +746,11 @@ public class Felix extends BundleImpl implements Framework
                     new HashMap<String, BundleImpl>(1),
                     new TreeMap<Long, BundleImpl>()
                 };
-                m_uninstalledBundles = new ArrayList<BundleImpl>(0);
+                m_uninstalledBundles = new ArrayList<>(0);
 
                 // Add the system bundle to the set of installed bundles.
                 maps[LOCATION_MAP_IDX].put(_getLocation(), this);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(0), this);
+                maps[IDENTIFIER_MAP_IDX].put(0L, this);
                 m_installedBundles = maps;
 
 
@@ -777,7 +778,7 @@ public class Felix extends BundleImpl implements Framework
                 {
                     m_resolver.resolve(
                         Collections.singleton(adapt(BundleRevision.class)),
-                        Collections.EMPTY_SET);
+                        Collections.emptySet());
                 }
                 catch (ResolutionException ex)
                 {
@@ -935,7 +936,7 @@ public class Felix extends BundleImpl implements Framework
                                     new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                                 };
                                 maps[LOCATION_MAP_IDX].remove(((BundleImpl) bundle)._getLocation());
-                                maps[IDENTIFIER_MAP_IDX].remove(new Long(((BundleImpl) bundle).getBundleId()));
+                                maps[IDENTIFIER_MAP_IDX].remove(Long.valueOf(((BundleImpl) bundle).getBundleId()));
                                 m_installedBundles = maps;
 
                                 m_logger.log(
@@ -1080,7 +1081,7 @@ public class Felix extends BundleImpl implements Framework
         {
             BundleImpl bundleImpl = revisionImpl.getBundle();
             sp.checkBundle(bundleImpl);
-            Map signers = (Map) sp.getSignerMatcher(bundleImpl, Bundle.SIGNERS_TRUSTED);
+            Map<X509Certificate, List<X509Certificate>> signers = sp.getSignerMatcher(bundleImpl, Bundle.SIGNERS_TRUSTED);
             certificates = signers.keySet().toArray(new java.security.cert.Certificate[signers.size()]);
         }
         revisionImpl.setProtectionDomain(
@@ -1841,9 +1842,9 @@ public class Felix extends BundleImpl implements Framework
      * @param locale
      * @return localized bundle headers dictionary.
     **/
-    Dictionary getBundleHeaders(BundleImpl bundle, String locale)
+    Dictionary<String,String> getBundleHeaders(BundleImpl bundle, String locale)
     {
-        return new MapToDictionary(bundle.getCurrentLocalizedHeader(locale));
+        return new MapToDictionary<>(bundle.getCurrentLocalizedHeader(locale));
     }
 
     /**
@@ -1888,7 +1889,7 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for Bundle.getResources().
     **/
-    Enumeration getBundleResources(BundleImpl bundle, String name)
+    Enumeration<URL> getBundleResources(BundleImpl bundle, String name)
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
         {
@@ -1941,8 +1942,8 @@ public class Felix extends BundleImpl implements Framework
         {
             // Use the entry filter enumeration to search the bundle content
             // recursively for matching entries and return URLs to them.
-            Enumeration enumeration =
-                new EntryFilterEnumeration(
+            Enumeration<URL> enumeration =
+                new EntryFilterEnumeration<>(
                     bundle.adapt(BundleRevision.class), false, name, "*", true, true);
             // If the enumeration has elements, then that means we need
             // to synthesize the directory entry.
@@ -1965,7 +1966,7 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for Bundle.getEntryPaths().
     **/
-    Enumeration getBundleEntryPaths(BundleImpl bundle, String path)
+    Enumeration<String> getBundleEntryPaths(BundleImpl bundle, String path)
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
         {
@@ -1974,8 +1975,8 @@ public class Felix extends BundleImpl implements Framework
 
         // Get the entry enumeration from the revision content and
         // create a wrapper enumeration to filter it.
-        Enumeration enumeration =
-            new EntryFilterEnumeration(
+        Enumeration<String> enumeration =
+            new EntryFilterEnumeration<>(
                 bundle.adapt(BundleRevision.class), false, path, "*", false, false);
 
         // Return the enumeration if it has elements.
@@ -1985,7 +1986,7 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for Bundle.findEntries().
     **/
-    Enumeration findBundleEntries(
+    Enumeration<URL> findBundleEntries(
             BundleImpl bundle, String path, String filePattern, boolean recurse)
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
@@ -2010,19 +2011,19 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for BundleWiring.findEntries().
      **/
-    Enumeration findBundleEntries(
+    Enumeration<URL> findBundleEntries(
         BundleRevision revision, String path, String filePattern, boolean recurse)
     {
         // Get the entry enumeration from the revision content and
         // create a wrapper enumeration to filter it.
-        Enumeration enumeration =
-            new EntryFilterEnumeration(revision, !(revision instanceof ExtensionManager.ExtensionManagerRevision), path, filePattern, recurse, true);
+        Enumeration<URL> enumeration =
+            new EntryFilterEnumeration<>(revision, !(revision instanceof ExtensionManager.ExtensionManagerRevision), path, filePattern, recurse, true);
 
         // Return the enumeration if it has elements.
         return (!enumeration.hasMoreElements()) ? null : enumeration;
     }
 
-    ServiceReference[] getBundleRegisteredServices(BundleImpl bundle)
+    ServiceReference<?>[] getBundleRegisteredServices(BundleImpl bundle)
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
         {
@@ -2030,15 +2031,15 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Filter list of registered service references.
-        ServiceReference[] refs = m_registry.getRegisteredServices(bundle);
+        ServiceReference<?>[] refs = m_registry.getRegisteredServices(bundle);
 
         return refs;
     }
 
-    ServiceReference[] getBundleServicesInUse(Bundle bundle)
+    ServiceReference<?>[] getBundleServicesInUse(Bundle bundle)
     {
         // Filter list of "in use" service references.
-        ServiceReference[] refs = m_registry.getServicesInUse(bundle);
+        ServiceReference<?>[] refs = m_registry.getServicesInUse(bundle);
 
         return refs;
     }
@@ -2078,7 +2079,7 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for Bundle.loadClass().
     **/
-    Class loadBundleClass(BundleImpl bundle, String name) throws ClassNotFoundException
+    Class<?> loadBundleClass(BundleImpl bundle, String name) throws ClassNotFoundException
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
         {
@@ -2659,7 +2660,7 @@ public class Felix extends BundleImpl implements Framework
                         {
                             try
                             {
-                                List<Bundle> list = new ArrayList<Bundle>(1);
+                                List<Bundle> list = new ArrayList<>(1);
                                 list.add(bundle);
                                 refreshPackages(list, null);
                             }
@@ -2963,7 +2964,7 @@ public class Felix extends BundleImpl implements Framework
                 target = (BundleImpl) maps[LOCATION_MAP_IDX].remove(bundle._getLocation());
                 if (target != null)
                 {
-                    maps[IDENTIFIER_MAP_IDX].remove(new Long(target.getBundleId()));
+                    maps[IDENTIFIER_MAP_IDX].remove(Long.valueOf(target.getBundleId()));
                     m_installedBundles = maps;
 
                     // Set the bundle's persistent state to uninstalled.
@@ -3009,12 +3010,12 @@ public class Felix extends BundleImpl implements Framework
         {
             // Populate a set of refresh candidates. This also includes any bundles that this bundle
             // is wired to but have previously been uninstalled.
-            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<Bundle>());
+            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<>());
 
             try
             {
                 // First see if we can throw away the complete graph
-                Set<Bundle> dependent = new HashSet<Bundle>();
+                Set<Bundle> dependent = new HashSet<>();
                 for (Bundle b : refreshCandidates)
                 {
                     populateDependentGraph(b, dependent);
@@ -3090,7 +3091,7 @@ public class Felix extends BundleImpl implements Framework
                 }
             }
         }
-        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<Bundle>());
+        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<>());
         for (Bundle b : dependent)
         {
             if (b.getState() == Bundle.UNINSTALLED && !refreshCandidates.contains(b))
@@ -3193,7 +3194,7 @@ public class Felix extends BundleImpl implements Framework
                     new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                 };
                 maps[LOCATION_MAP_IDX].put(bundle._getLocation(), bundle);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
+                maps[IDENTIFIER_MAP_IDX].put(Long.valueOf(bundle.getBundleId()), bundle);
                 m_installedBundles = maps;
             }
             finally
@@ -3358,7 +3359,7 @@ public class Felix extends BundleImpl implements Framework
                         new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                     };
                     maps[LOCATION_MAP_IDX].put(location, bundle);
-                    maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
+                    maps[IDENTIFIER_MAP_IDX].put(Long.valueOf(bundle.getBundleId()), bundle);
                     m_installedBundles = maps;
                 }
                 finally
@@ -3397,9 +3398,9 @@ public class Felix extends BundleImpl implements Framework
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+                Collection<Bundle> bundles = new ArrayList<>(1);
                 bundles.add(existing);
-                bundles = new ShrinkableCollection<Bundle>(bundles);
+                bundles = new ShrinkableCollection<>(bundles);
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3470,7 +3471,7 @@ public class Felix extends BundleImpl implements Framework
     Bundle getBundle(BundleContext bc, long id)
     {
         BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+            m_installedBundles[IDENTIFIER_MAP_IDX].get(Long.valueOf(id));
         if (bundle != null)
         {
             List<BundleImpl> uninstalledBundles = m_uninstalledBundles;
@@ -3491,9 +3492,9 @@ public class Felix extends BundleImpl implements Framework
                 getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
         if (!hooks.isEmpty() && (bundle != null))
         {
-            Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+            Collection<Bundle> bundles = new ArrayList<>(1);
             bundles.add(bundle);
-            bundles = new ShrinkableCollection<Bundle>(bundles);
+            bundles = new ShrinkableCollection<>(bundles);
             for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
             {
                 org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3532,7 +3533,7 @@ public class Felix extends BundleImpl implements Framework
     Bundle getBundle(long id)
     {
         BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+            m_installedBundles[IDENTIFIER_MAP_IDX].get(Long.valueOf(id));
         if (bundle != null)
         {
             return bundle;
@@ -3568,7 +3569,7 @@ public class Felix extends BundleImpl implements Framework
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> shrunkBundles = new ShrinkableCollection<Bundle>(new ArrayList<Bundle>(bundles));
+                Collection<Bundle> shrunkBundles = new ShrinkableCollection<>(new ArrayList<>(bundles));
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3647,7 +3648,7 @@ public class Felix extends BundleImpl implements Framework
                 getHookRegistry().getHooks(org.osgi.framework.hooks.service.ListenerHook.class);
         if (oldFilter != null)
         {
-            final Collection removed = Collections.singleton(
+            final Collection<org.osgi.framework.hooks.service.ListenerHook.ListenerInfo> removed = Collections.singleton(
                 new ListenerInfo(bundle, bundle._getBundleContext(),
                     ServiceListener.class, l, oldFilter, null, true));
             for (ServiceReference<org.osgi.framework.hooks.service.ListenerHook> sr : listenerHooks)
@@ -3673,7 +3674,7 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Invoke the ListenerHook.added() on all hooks.
-        final Collection added = Collections.singleton(
+        final Collection<org.osgi.framework.hooks.service.ListenerHook.ListenerInfo> added = Collections.singleton(
             new ListenerInfo(bundle, bundle._getBundleContext(),
                 ServiceListener.class, l, newFilter, null, false));
         for (ServiceReference<org.osgi.framework.hooks.service.ListenerHook> sr : listenerHooks)
@@ -3716,7 +3717,7 @@ public class Felix extends BundleImpl implements Framework
             // Invoke the ListenerHook.removed() on all hooks.
             Set<ServiceReference<org.osgi.framework.hooks.service.ListenerHook>> listenerHooks =
                     getHookRegistry().getHooks(org.osgi.framework.hooks.service.ListenerHook.class);
-            Collection removed = Collections.singleton(listener);
+            Collection<org.osgi.framework.hooks.service.ListenerHook.ListenerInfo> removed = Collections.singleton(listener);
             for (ServiceReference<org.osgi.framework.hooks.service.ListenerHook> sr : listenerHooks)
             {
                 org.osgi.framework.hooks.service.ListenerHook lh = getService(this, sr, false);
@@ -3763,8 +3764,8 @@ public class Felix extends BundleImpl implements Framework
      *             service or null.
      * @return A <code>ServiceRegistration</code> object or null.
     **/
-    ServiceRegistration registerService(
-        BundleContextImpl context, String[] classNames, Object svcObj, Dictionary dict)
+    ServiceRegistration<?> registerService(
+        BundleContextImpl context, String[] classNames, Object svcObj, Dictionary<String,?> dict)
     {
         if (classNames == null)
         {
@@ -3775,29 +3776,28 @@ public class Felix extends BundleImpl implements Framework
             throw new IllegalArgumentException("Service object cannot be null.");
         }
 
-        ServiceRegistration reg = null;
+        ServiceRegistration<?> reg = null;
 
         // Check to make sure that the service object is
         // an instance of all service classes; ignore if
         // service object is a service factory.
         if (!(svcObj instanceof ServiceFactory))
         {
-            for (int i = 0; i < classNames.length; i++)
-            {
-                Class clazz = Util.loadClassUsingClass(svcObj.getClass(), classNames[i], m_secureAction);
+            for (String className : classNames) {
+                Class<?> clazz = Util.loadClassUsingClass(svcObj.getClass(), className, m_secureAction);
                 if (clazz == null)
                 {
-                    if (!Util.checkImplementsWithName(svcObj.getClass(), classNames[i]))
+                    if (!Util.checkImplementsWithName(svcObj.getClass(), className))
                     {
                         throw new IllegalArgumentException(
-                                "Cannot cast service: " + classNames[i]);
+                                "Cannot cast service: " + className);
                     }
                 }
                 else if (!clazz.isAssignableFrom(svcObj.getClass()))
                 {
                     throw new IllegalArgumentException(
                         "Service object is not an instance of \""
-                        + classNames[i] + "\".");
+                        + className + "\".");
                 }
             }
         }
@@ -3846,7 +3846,7 @@ public class Felix extends BundleImpl implements Framework
      * @return Array of ServiceReference objects that meet the criteria
      * @throws InvalidSyntaxException
      */
-    ServiceReference[] getServiceReferences(
+    ServiceReference<?>[] getServiceReferences(
         final BundleImpl bundle, final String className,
         final String expr, final boolean checkAssignable)
         throws InvalidSyntaxException
@@ -3866,15 +3866,15 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Ask the service registry for all matching service references.
-        final Collection refList = m_registry.getServiceReferences(className, filter);
+        final Collection<ServiceReference<?>> refList = m_registry.getServiceReferences(className, filter);
 
         // Filter on assignable references
         if (checkAssignable)
         {
-            for (Iterator refIter = refList.iterator(); refIter.hasNext();)
+            for (Iterator<ServiceReference<?>> refIter = refList.iterator(); refIter.hasNext();)
             {
                 // Get the current service reference.
-                ServiceReference ref = (ServiceReference) refIter.next();
+                ServiceReference<?> ref = refIter.next();
 
                 // Now check for castability.
                 if (!Util.isServiceAssignable(bundle, ref))
@@ -3885,7 +3885,7 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // If the requesting bundle is the system bundle, ignore the effects of the findhooks
-        Collection resRefList = (bundle == this ? new ArrayList(refList) : refList);
+        Collection<ServiceReference<?>> resRefList = (bundle == this ? new ArrayList<>(refList) : refList);
 
         // activate findhooks
         Set<ServiceReference<org.osgi.framework.hooks.service.FindHook>> findHooks =
@@ -3903,7 +3903,7 @@ public class Felix extends BundleImpl implements Framework
                         className,
                         expr,
                         !checkAssignable,
-                        new ShrinkableCollection(refList));
+                        new ShrinkableCollection<>(refList));
                 }
                 catch (Throwable th)
                 {
@@ -3940,11 +3940,11 @@ public class Felix extends BundleImpl implements Framework
      * @return Array of ServiceReference objects that meet the criteria
      * @throws InvalidSyntaxException
      */
-    ServiceReference[] getAllowedServiceReferences(
+    ServiceReference<?>[] getAllowedServiceReferences(
         BundleImpl bundle, String className, String expr, boolean checkAssignable)
         throws InvalidSyntaxException
     {
-        ServiceReference[] refs = getServiceReferences(bundle, className, expr, checkAssignable);
+        ServiceReference<?>[] refs = getServiceReferences(bundle, className, expr, checkAssignable);
 
         Object sm = System.getSecurityManager();
 
@@ -3953,14 +3953,13 @@ public class Felix extends BundleImpl implements Framework
             return refs;
         }
 
-        List result = new ArrayList();
+        List<ServiceReference<?>> result = new ArrayList<>();
 
-        for (int i = 0; i < refs.length; i++)
-        {
+        for (ServiceReference<?> ref : refs) {
             try
             {
-                ((SecurityManager) sm).checkPermission(new ServicePermission(refs[i], ServicePermission.GET));
-                result.add(refs[i]);
+                ((SecurityManager) sm).checkPermission(new ServicePermission(ref, ServicePermission.GET));
+                result.add(ref);
             }
             catch (Exception ex)
             {
@@ -3991,7 +3990,7 @@ public class Felix extends BundleImpl implements Framework
         return null;
     }
 
-    boolean ungetService(Bundle bundle, ServiceReference ref, Object srvObj)
+    boolean ungetService(Bundle bundle, ServiceReference<?> ref, Object srvObj)
     {
         return m_registry.ungetService(bundle, ref, srvObj);
     }
@@ -4035,8 +4034,8 @@ public class Felix extends BundleImpl implements Framework
     // PackageAdmin related methods.
     //
 
-    private final Map<Class, Boolean> m_systemBundleClassCache =
-        new WeakHashMap<Class, Boolean>();
+    private final Map<Class<?>, Boolean> m_systemBundleClassCache =
+        new WeakHashMap<>();
 
     /**
      * This method returns the bundle associated with the specified class if
@@ -4049,7 +4048,7 @@ public class Felix extends BundleImpl implements Framework
      *         if the class was not loaded by a bundle or its associated
      *         bundle belongs to a different framework instance.
     **/
-    Bundle getBundle(Class clazz)
+    Bundle getBundle(Class<?> clazz)
     {
         // If the class comes from bundle class loader, then return
         // associated bundle if it is from this framework instance.
@@ -4074,7 +4073,7 @@ public class Felix extends BundleImpl implements Framework
             }
             if (fromSystemBundle == null)
             {
-                Class sbClass = null;
+                Class<?> sbClass = null;
                 try
                 {
                     sbClass = ((BundleWiringImpl) m_extensionManager
@@ -4097,7 +4096,7 @@ public class Felix extends BundleImpl implements Framework
                     m_systemBundleClassCache.put(clazz, fromSystemBundle);
                 }
             }
-            return fromSystemBundle.booleanValue() ? this : null;
+            return fromSystemBundle ? this : null;
         }
         return null;
     }
@@ -4118,7 +4117,7 @@ public class Felix extends BundleImpl implements Framework
         BundleRequirementImpl req = new BundleRequirementImpl(
             null,
             BundleRevision.PACKAGE_NAMESPACE,
-            Collections.EMPTY_MAP,
+            Collections.emptyMap(),
             attrs);
         List<BundleCapability> exports = m_resolver.findProviders(req, false);
 
@@ -4133,7 +4132,7 @@ public class Felix extends BundleImpl implements Framework
 
         if (exports != null)
         {
-            List pkgs = new ArrayList();
+            List<ExportedPackageImpl> pkgs = new ArrayList<>();
 
             for (Iterator<BundleCapability> it = exports.iterator(); it.hasNext(); )
             {
@@ -4161,7 +4160,7 @@ public class Felix extends BundleImpl implements Framework
                         // If it's a fragment, find the revisions of the attached
                         // bundle(s) and work with those instead. Note that fragments
                         // can be attached to multiple hosts...
-                        revisions = new ArrayList<BundleRevision>();
+                        revisions = new ArrayList<>();
 
                         for (BundleWire bw : originBr.getWiring().getRequiredWires(HostNamespace.HOST_NAMESPACE))
                         {
@@ -4208,7 +4207,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     ExportedPackage[] getExportedPackages(Bundle b)
     {
-        List list = new ArrayList();
+        List<ExportedPackageImpl> list = new ArrayList<>();
 
         // If a bundle is specified, then return its
         // exported packages.
@@ -4243,10 +4242,9 @@ public class Felix extends BundleImpl implements Framework
 
                 // Now get exported packages from installed bundles.
                 Bundle[] bundles = getBundles();
-                for (int bundleIdx = 0; bundleIdx < bundles.length; bundleIdx++)
-                {
-                    BundleImpl bundle = (BundleImpl) bundles[bundleIdx];
-                    getExportedPackages(bundle, list);
+                for (Bundle bundle : bundles) {
+                    BundleImpl bundleImpl = (BundleImpl) bundle;
+                    getExportedPackages(bundleImpl, list);
                 }
             }
             finally
@@ -4266,7 +4264,7 @@ public class Felix extends BundleImpl implements Framework
      * @param bundle The bundle from which to retrieve exported packages.
      * @param list The list to which the exported packages are added
     **/
-    private void getExportedPackages(Bundle bundle, List list)
+    private void getExportedPackages(Bundle bundle, List<ExportedPackageImpl> list)
     {
         // Since a bundle may have many revisions associated with it,
         // one for each revision in the cache, search each revision
@@ -4338,7 +4336,7 @@ public class Felix extends BundleImpl implements Framework
             {
                 // Get bundle revisions for bundles in INSTALLED state.
                 Set<BundleRevision> revisions =
-                    new HashSet<BundleRevision>(targets.size());
+                    new HashSet<>(targets.size());
                 for (Bundle b : targets)
                 {
                     if (b.getState() != Bundle.UNINSTALLED)
@@ -4354,7 +4352,7 @@ public class Felix extends BundleImpl implements Framework
                 }
                 try
                 {
-                    m_resolver.resolve(Collections.EMPTY_SET, revisions);
+                    m_resolver.resolve(Collections.emptySet(), revisions);
                     if (result)
                     {
                         for (BundleRevision br : revisions)
@@ -4367,11 +4365,7 @@ public class Felix extends BundleImpl implements Framework
                         }
                     }
                 }
-                catch (ResolutionException ex)
-                {
-                    result = false;
-                }
-                catch (BundleException ex)
+                catch (ResolutionException | BundleException ex)
                 {
                     result = false;
                 }
@@ -4390,7 +4384,7 @@ public class Felix extends BundleImpl implements Framework
     {
         try
         {
-            m_resolver.resolve(Collections.singleton(revision), Collections.EMPTY_SET);
+            m_resolver.resolve(Collections.singleton(revision), Collections.emptySet());
         }
         catch (ResolutionException ex)
         {
@@ -4421,7 +4415,7 @@ public class Felix extends BundleImpl implements Framework
         Collection<Bundle> newTargets = targets;
         if (newTargets == null)
         {
-            List<Bundle> list = new ArrayList<Bundle>();
+            List<Bundle> list = new ArrayList<>();
 
             // First add all uninstalled bundles.
             for (int i = 0;
@@ -4432,7 +4426,7 @@ public class Felix extends BundleImpl implements Framework
             }
 
             // Then add all updated bundles.
-            Iterator iter = m_installedBundles[LOCATION_MAP_IDX].values().iterator();
+            Iterator<BundleImpl> iter = m_installedBundles[LOCATION_MAP_IDX].values().iterator();
             while (iter.hasNext())
             {
                 BundleImpl bundle = (BundleImpl) iter.next();
@@ -4454,7 +4448,7 @@ public class Felix extends BundleImpl implements Framework
         {
             // Create map of bundles that import the packages
             // from the target bundles.
-            bundles = new HashSet<Bundle>();
+            bundles = new HashSet<>();
             for (Bundle target : newTargets)
             {
                 // If anyone passes in a null bundle, then just
@@ -4465,7 +4459,7 @@ public class Felix extends BundleImpl implements Framework
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
         }
@@ -4507,7 +4501,7 @@ public class Felix extends BundleImpl implements Framework
                     // packages from these bundles.
 
                     // Create refresh helpers for each bundle.
-                    List<RefreshHelper> helpers = new ArrayList<RefreshHelper>(bundles.size());
+                    List<RefreshHelper> helpers = new ArrayList<>(bundles.size());
                     for (Bundle b : bundles)
                     {
                         // Remove any targeted bundles from the uninstalled bundles
@@ -4617,19 +4611,19 @@ public class Felix extends BundleImpl implements Framework
         try
         {
             // If there are targets, then find all dependencies for each one.
-            Set<Bundle> bundles = Collections.EMPTY_SET;
+            Set<Bundle> bundles = Collections.emptySet();
             if (targets != null)
             {
                 // Create map of bundles that import the packages
                 // from the target bundles.
-                bundles = new HashSet<Bundle>();
+                bundles = new HashSet<>();
                 for (Bundle target : targets)
                 {
                     // Add the current target bundle to the map of
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
             return bundles;
@@ -4657,7 +4651,7 @@ public class Felix extends BundleImpl implements Framework
                     // Add each dependent bundle to set.
                     set.add(b);
                     // Now recurse into each bundle to get its dependents.
-                    set = populateDependentGraph((BundleImpl) b, set);
+                    set = populateDependentGraph(b, set);
                 }
             }
         }
@@ -4681,7 +4675,7 @@ public class Felix extends BundleImpl implements Framework
 
         try
         {
-            List<Bundle> bundles = new ArrayList<Bundle>();
+            List<Bundle> bundles = new ArrayList<>();
             if (m_uninstalledBundles != null)
             {
                 for (Bundle b : m_uninstalledBundles)
@@ -4721,13 +4715,13 @@ public class Felix extends BundleImpl implements Framework
         m_securityProvider = securityProvider;
     }
 
-    Object getSignerMatcher(BundleImpl bundle, int signersType)
+    Map<X509Certificate, List<X509Certificate>> getSignerMatcher(BundleImpl bundle, int signersType)
     {
         if ((bundle != this) && (m_securityProvider != null))
         {
             return m_securityProvider.getSignerMatcher(bundle, signersType);
         }
-        return new HashMap();
+        return new HashMap<>();
     }
 
     boolean impliesBundlePermission(BundleProtectionDomain bundleProtectionDomain, Permission permission, boolean direct)
@@ -4761,13 +4755,13 @@ public class Felix extends BundleImpl implements Framework
 
         // Get the activator class from the header map.
         BundleActivator activator = null;
-        Map headerMap = ((BundleRevisionImpl) impl.adapt(BundleRevision.class)).getHeaders();
+        Map<String,String> headerMap = ((BundleRevisionImpl) impl.adapt(BundleRevision.class)).getHeaders();
         String className = (String) headerMap.get(Constants.BUNDLE_ACTIVATOR);
         // Try to instantiate activator class if present.
         if (className != null)
         {
             className = className.trim();
-            Class clazz;
+            Class<?> clazz;
             try
             {
                 clazz = ((BundleWiringImpl)
@@ -4858,7 +4852,7 @@ public class Felix extends BundleImpl implements Framework
      * @param event The service event to fire.
      * @param oldProps The old props of the service.
     **/
-    private void fireServiceEvent(ServiceEvent event, Dictionary oldProps)
+    private void fireServiceEvent(ServiceEvent event, Dictionary<String,?> oldProps)
     {
         m_dispatcher.fireServiceEvent(event, oldProps, this);
     }
@@ -4942,7 +4936,7 @@ public class Felix extends BundleImpl implements Framework
         }
     }
 
-    private void loadPrefixFromDefaultIfNotDefined(Map configMap, Properties defaultProperties, String prefix)
+    private void loadPrefixFromDefaultIfNotDefined(Map<String,Object> configMap, Properties defaultProperties, String prefix)
     {
         Map<String, String> defaultPropsWithPrefix = Util.getPropertiesWithPrefix(defaultProperties, prefix);
 
@@ -5172,9 +5166,8 @@ public class Felix extends BundleImpl implements Framework
 
             // Refresh all updated bundles.
             Bundle[] bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
-            {
-                BundleImpl bundle = (BundleImpl) bundles[i];
+            for (Bundle bundle2 : bundles) {
+                BundleImpl bundle = (BundleImpl) bundle2;
                 if (bundle.isRemovalPending())
                 {
                     try
@@ -5210,19 +5203,17 @@ public class Felix extends BundleImpl implements Framework
 
             // Dispose of the bundles to close their associated contents.
             bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
-            {
-                ((BundleImpl) bundles[i]).close();
+            for (Bundle bundle : bundles) {
+                ((BundleImpl) bundle).close();
             }
 
             m_extensionManager.stopExtensionBundles(Felix.this);
             // Stop all system bundle activators.
-            for (int i = 0; i < m_activatorList.size(); i++)
-            {
+            for (Object element : m_activatorList) {
                 try
                 {
                     Felix.m_secureAction.stopActivator((BundleActivator)
-                        m_activatorList.get(i), _getBundleContext());
+                        element, _getBundleContext());
                 }
                 catch (Throwable throwable)
                 {
@@ -5426,7 +5417,7 @@ public class Felix extends BundleImpl implements Framework
 
             // Use a copy-on-write approach to add the bundle
             // to the uninstalled list.
-            List<BundleImpl> uninstalledBundles = new ArrayList(m_uninstalledBundles);
+            List<BundleImpl> uninstalledBundles = new ArrayList<>(m_uninstalledBundles);
             uninstalledBundles.add(bundle);
             m_uninstalledBundles = uninstalledBundles;
         }
@@ -5455,7 +5446,7 @@ public class Felix extends BundleImpl implements Framework
 
             // Use a copy-on-write approach to remove the bundle
             // from the uninstalled list.
-            List<BundleImpl> uninstalledBundles = new ArrayList(m_uninstalledBundles);
+            List<BundleImpl> uninstalledBundles = new ArrayList<>(m_uninstalledBundles);
             uninstalledBundles.remove(bundle);
             m_uninstalledBundles = uninstalledBundles;
         }
